# Asset.Manager

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: Version.cmake
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd/Asset.Manager/: Asset.Manager.cpp  CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/Abstracts/: AppBase.cpp  AppBase.hpp  CMakeLists.txt  EngineBase.cpp  EngineBase.hpp
src/lib/Client/: App.cpp  App.hpp  CMakeLists.txt
src/lib/Common/: Common.hpp
src/lib/Engine/: AndroidStudioEngine.cpp  AndroidStudioEngine.hpp  CMakeLists.txt  XcodeEngine.cpp  XcodeEngine.hpp
src/lib/Interfaces/: IEngineHandler.hpp  IInterface.hpp  IJsonObject.hpp
src/lib/Models/: AssetManagerProfileModel.hpp  CMakeLists.txt  CopyFileModel.hpp  CopyFolderModel.hpp  GradleFileModel.hpp  IDEConfigurationModel.cpp  IDEConfigurationModel.hpp  PbxprojFileModel.hpp  PlistFileModel.hpp  RawFileModel.hpp  UpdateContentInFilesModel.hpp  XmlFileModel.hpp
src/lib/Utilities/: ArgParser.cpp  ArgParser.hpp  AssetManagerProfileDeserializer.cpp  AssetManagerProfileDeserializer.hpp  CMakeLists.txt  RapidXmlHelpers.hpp  StringHelpers.cpp  StringHelpers.hpp
